fixed css spacing & sizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ section {
   justify-content: space-between;
   position: sticky;
   position: -webkit-sticky;
-  padding: 5px;
+  padding: 1px;
   top: 0;
   background-image: url('../images/hero_banner.jpeg');
   background-size: cover;
@@ -52,9 +52,13 @@ section {
   z-index: 9999;
 }
 
+.log-heading {
+  margin-bottom: 4px;
+}
+
 .nav-bar h1 {
   margin: 0;
-  font-size: 3em;
+  font-size: 2em;
   color: var(--primary-color);
   font-family: 'Roboto', sans-serif;
   margin-top: 15px;
@@ -73,7 +77,6 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1.5rem;
 }
 
 .hamburger {
@@ -173,7 +176,7 @@ html {
 .contact-me {
   align-items: flex-start;
   flex-direction: column;
-  scroll-margin-top: 4rem;
+  scroll-margin-top: 2rem;
 }
 
 .about-me {
@@ -377,11 +380,11 @@ footer a {
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 815px) {
   .nav-bar nav ul li a {
-    font-size: 1em;
+    font-size: 2em;
   }
 
   .nav-bar h1 {
-    font-size: 1.5em;
+    font-size: em;
   }
 
   .nav-bar .logo {
@@ -442,7 +445,7 @@ footer a {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1000px) {
   .nav-menu {
     position: fixed;
     left: -100%;
